--- a/src/App.css
+++ b/src/App.css
@@ -139,8 +139,36 @@ body {
     }
     main li:nth-child(2) {
       padding-bottom: 0px;
-    }  
+    }
+    main li span {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 40px;
+    }
+    .podium ul {
+      flex-direction: column;
+      align-items: center;
   }
+
+  .podium li {
+      width: 80%;
+      height: auto;
+      margin: 10px 0;
+  }
+
+  .primeiro {
+      order: 1;
+  }
+
+  .segundo {
+      order: 2;
+  }
+
+  .terceiro {
+      order: 3;
+  }
+}
 
   section li {
     display: flex;
@@ -217,7 +245,7 @@ body {
 
   .row p {
     background-color: rgb(201, 93, 60);
-    padding: 25px;
+    padding: 15px;
     border-radius: 8px 0px 0px 8px;
     font-size: 25px;
   }
@@ -226,7 +254,7 @@ body {
     display: flex;
     justify-content: flex-end;
     width: 50%;
-    padding-right: 50px;
+    padding-right: 20px;
   }
   
   .row img { 
